--- a/example11_index.html
+++ b/example11_index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8">
         <script src="./js1.js"></script>
+        <script type="module" src="./js2.js"></script>
     </head>
     <body >        
-        <button onclick="myFunction1(1)">Click me1</button>
+        <button onclick="myFunction1(1)">button1</button>
+        <button onclick="myFunction2(1)">button2</button>
     </body>
 </html>
