--- a/example11_index.html
+++ b/example11_index.html
@@ -4,9 +4,14 @@
         <meta charset="utf-8">
         <script src="./js1.js"></script>
         <script type="module" src="./js2.js"></script>
+        <script type="module">
+         import { Es6Module3 } from  "./js3.js";
+         document.querySelector('#myFunction3').addEventListener('click', Es6Module3.myFunction3);
+        </script>
     </head>
     <body >        
         <button onclick="myFunction1(1)">button1</button>
-        <button onclick="myFunction2(1)">button2</button>
+        <button onclick="myFunction2(2)">button2</button>
+        <button type="button" id="myFunction3">button3</button>
     </body>
 </html>
