--- a/example11_index.html
+++ b/example11_index.html
@@ -3,15 +3,10 @@
     <head>
         <meta charset="utf-8">
         <script src="./js1.js"></script>
-        <script type="module" src="./js2.js"></script>
-        <script type="module">
-         import { Es6Module3 } from  "./js3.js";
-         document.querySelector('#myFunction3').addEventListener('click', Es6Module3.myFunction3);
-        </script>
     </head>
     <body >        
-        <button onclick="myFunction1(1)">button1</button>
-        <button onclick="myFunction2(2)">button2</button>
-        <button type="button" id="myFunction3">button3</button>
+        <button onclick="myFunction1(1)">Button 1</button>
+        <button type="button" id="button2">Button 2</button>
+        <script type="module" src="./js2.js"></script>
     </body>
 </html>
